Done API and database query for getOne Restaurant #1
